--- a/package.json
+++ b/package.json
@@ -4,5 +4,18 @@
   "main": "index.js",
   "repository": "git@github.com:sliftist/jsx-render-watcher.git",
   "author": "sliftist <sliftist@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "preact": "^10.3.4",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2"
+  },
+  "scripts": {
+    "start": "yarn dev",
+    "build": "node ./node_modules/webpack/bin/webpack.js --progress --optimize-minimize --mode=production",
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --optimize-minimize"
+  }
 }
