--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "preact": "^10.3.4",
+    "ts-loader": "^6.2.1",
+    "typescript": "3.8.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.2"
+    "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
     "start": "yarn dev",
