--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "sliftist <sliftist@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "css-loader": "^3.4.2",
     "preact": "^10.3.4",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "3.8.3",
     "webpack": "^4.42.0",
