--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "author": "sliftist <sliftist@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^16.9.26",
+    "@types/react-dom": "^16.9.5",
     "css-loader": "^3.4.2",
+    "pchannel": "^1.0.0",
     "preact": "^10.3.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "3.8.3",
