--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "author": "sliftist <sliftist@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/jasmine": "^3.5.10",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "css-loader": "^3.4.2",
+    "jasmine": "^3.5.0",
     "pchannel": "^1.0.0",
     "preact": "^10.3.4",
     "preact-render-to-string": "^5.1.4",
+    "random-js": "^2.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "style-loader": "^1.1.3",
