--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jasmine": "^3.5.10",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/typescript-estree": "^2.27.0",
     "css-loader": "^3.4.2",
     "jasmine": "^3.5.0",
     "pchannel": "^1.0.0",
@@ -36,7 +37,7 @@
   },
   "scripts": {
     "start": "yarn dev",
-    "build": "node ./node_modules/webpack/bin/webpack.js --progress --optimize-minimize --mode=production",
-    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --optimize-minimize"
+    "build": "yarn run webpack --progress --optimize-minimize --mode=production",
+    "dev": "yarn run webpack-dev-server --progress --optimize-minimize"
   }
 }
