--- a/src/closeParser/.vscode/launch.json
+++ b/src/closeParser/.vscode/launch.json
@@ -16,7 +16,10 @@
 			"outFiles": [
 				"${workspaceFolder}/dist/extension.js"
 			],
-			"preLaunchTask": "${defaultBuildTask}"
+			"preLaunchTask": "${defaultBuildTask}",
+			"env": {
+				"DEBUG": "true"
+			}
 		}
 	]
 }
