--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@types/jasmine": "^3.5.10",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "@typescript-eslint/typescript-estree": "^2.27.0",
     "css-loader": "^3.4.2",
+    "eslint": "^7.4.0",
     "jasmine": "^3.5.0",
     "pchannel": "^1.0.0",
     "preact": "^10.3.4",
@@ -28,6 +31,7 @@
     "random-js": "^2.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "stat-profile": "0.0.4",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "3.8.3",
