--- a/src/closeParser/package.json
+++ b/src/closeParser/package.json
@@ -36,9 +36,7 @@
 		"@types/vscode": "^1.43.0",
 		"@typescript-eslint/typescript-estree": "^2.27.0",
 		"typescript": "^3.8.3",
-		"webpack": "^4.42.1"
-	},
-	"peerDependencies": {
+		"webpack": "^4.42.1",
 		"ts-loader": "^6.2.2",
 		"webpack-cli": "^3.3.11"
 	},
